mailman (1:2.1.12-2) UNRELEASED; urgency=low

  [ Lionel Elie Mamane ]
  * README.Exim4.Debian: add debug_print statements

 -- Lionel Elie Mamane <lmamane@debian.org>  Fri, 20 Mar 2009 09:30:35 +0100

mailman (1:2.1.12-1) unstable; urgency=low

  * New upstream release.
    + Minimum Python version is now 2.4.
    + Patches obsoleted (incorporated or not useful anymore):
      00_stolen_from_HEAD,
      11_handle_propfind.patch,
      32_MIME_fixup,
      62_new_list_bad_pending_requests,
      67_update_handle_old_versions,
      68_update_catalan,
      78_DeprecationWarning,
      80_fix_string_search.
      Refresh all others. Many thanks to Mark Sapiro and
      Paul Wise for the help in cleaning this up.
    + Fixes bounce handling NotAMemberError (closes: #517997).
  * Various packaging cleanups, upgrade debhelper to level 7.
  * Removes embedded copy of pythonlib/email module.
  * Checked for policy 3.8.1, remove shipped var/{run,lock}
    dirs, they are already created correctly by the init script.

 -- Thijs Kinkhorst <thijs@debian.org>  Sat, 14 Mar 2009 14:18:16 +0100

mailman (1:2.1.11-11) unstable; urgency=high

  [ Debconf Translations ]
  * Updated Vietnamese, thanks Clytie Siddall (closes: #513097).

 -- Thijs Kinkhorst <thijs@debian.org>  Mon, 26 Jan 2009 13:42:33 +0100

mailman (1:2.1.11-10) unstable; urgency=low

  [ Debconf Translations ]
  * Updated Catalan, thanks David Planella.

 -- Thijs Kinkhorst <thijs@debian.org>  Wed, 07 Jan 2009 23:09:56 +0100

mailman (1:2.1.11-9) unstable; urgency=high

  [ Debconf Translations ]
  * Updated Spanish, thanks Javier Fernández-Sanguino (closes: #510023).
  * Updated Japanese, thanks Kenshi Muto (closes: #509996).
  * Updated Galician, thanks Marce Villarino (closes: #510002).
  * Updated French, thanks Christian Perrier (closes: #510016).
  * Updated Italian, thanks Luca Monducci (closes: #510107).
  * Updated Swedish, thanks Martin Bagge and Daniel Nylander
    (closes: #510206).